# Nakupak

./: .env.example  .gitignore  Dockerfile  README.md
backend/: file::memory:  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 91105d06de6e_initial_schema_with_unit_columns.py  a1b2c3d4e5f6_add_checked_to_shopping_list_items.py  b2c3d4e5f6g7_add_recipe_description.py  c3d4e5f6g7h8_add_recipe_image_url.py  d4e5f6g7h8i9_drop_recipe_color.py
backend/app/: auth.py  database.py  llm.py  llm_worker_manager.py  main.py  models.py  schemas.py  utils.py  websocket.py
backend/app/routers/: auth.py  import_recipe.py  items.py  list.py  recipes.py  sessions.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_unit.py  test_categories_api.py  test_household_isolation.py  test_items_api.py  test_list_api.py  test_pool_api.py  test_recipes_api.py  test_sessions_api.py  test_utils.py  test_websocket.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.vue  main.js  router.js  style.css  test-setup.js
frontend/src/components/: AnimatedCategoryList.vue  AnimatedList.vue  AppButton.vue  BaseModal.vue  CategoryManagerModal.vue  CategoryModal.vue  CategorySection.vue  CheckBox.vue  CollectionCard.vue  ConfirmModal.vue  EmptyState.vue  IconButton.vue  ImportRecipeModal.vue  ItemBadge.vue  ItemCard.vue  ItemCardList.vue  ItemModal.vue  ItemRow.vue  ItemSearchPicker.vue  (+7 more)
worker/: llm_worker.py  pyproject.toml
(+27 files in other folders)
