[project]
name = "listom-backend"
version = "0.1.0"
description = "Listom backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "python-jose[cryptography]>=3.3.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.18.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
